--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
-    "@stripe/stripe-js": "^4.0.0",
+    "@stripe/stripe-js": "^3.5.0",
     "@vercel/analytics": "^1.3.1",
     "date-fns": "^3.6.0",
+    "ngx-stripe": "^17.2.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.13.0",
     "rxjs": "~7.8.0",
