--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.3.0",
     "@stripe/stripe-js": "^3.5.0",
     "@vercel/analytics": "^1.3.1",
+    "angularx-qrcode": "^17.0.1",
     "date-fns": "^3.6.0",
     "ngx-stripe": "^17.2.0",
     "primeicons": "^7.0.0",
