--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 NG_APP_STRIPE_PUBLIC_KEY=test_public_key
+NG_APP_PUSHER_APP_KEY=your_pusher_app_key
+NG_APP_PUSHER_APP_CLUSTER=your_pusher_app_cluster
+NG_APP_PUSHER_APP_SECRET=your_pusher_app_secret
+NG_APP_PUSHER_APP_ID=your_pusher_app_id
