--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@angular/router": "^17.3.0",
     "@stripe/stripe-js": "^3.5.0",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "angularx-qrcode": "^17.0.1",
     "date-fns": "^3.6.0",
     "ngx-stripe": "^17.2.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.13.0",
+    "pusher-js": "^8.4.0-rc2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
