meet card poi update UI and other improvements

--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,10 @@
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "ngxEnv": {
+              "verbose": true
+            }
           },
           "configurations": {
             "production": {
