--- a/angular.json
+++ b/angular.json
@@ -15,11 +15,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@ngx-env/builder:application",
+          "builder": "@ngx-env/builder:browser",
           "options": {
             "outputPath": "dist/front",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+            "main": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -95,12 +95,6 @@
         },
         "serve": {
           "builder": "@ngx-env/builder:dev-server",
-          "options": {
-            "port": 4200,
-            "liveReload": true,
-            "hmr": true,
-            "poll": 1000
-          },
           "configurations": {
             "production": {
               "buildTarget": "front:build:production"
