--- a/angular.json
+++ b/angular.json
@@ -106,7 +106,7 @@
               "buildTarget": "front:build:development"
             }
           },
-          "defaultConfiguration": "preprod"
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@ngx-env/builder:extract-i18n",
