--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@stripe/stripe-js": "^3.5.0",
+    "@types/lodash": "^4.17.6",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "angularx-qrcode": "^17.0.1",
     "date-fns": "^3.6.0",
+    "lodash": "^4.17.21",
     "ngx-stripe": "^17.2.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.13.0",
