--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "angularx-qrcode": "^17.0.1",
+    "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
     "ngx-stripe": "^17.2.0",
